--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -15,20 +15,21 @@ planejamento de rotas físicas.
 Embora o estudo não tenha contemplado testes empíricos ou simulações, a
 proposta estabelece uma base sólida para implementações futuras, podendo ser
 expandida para considerar múltiplos comprimentos de onda, métricas de
-confiabilidade e critérios de engenharia de tráfego. Como trabalhos futuros,
-recomenda-se a validação da heurística em ambiente simulado, a comparação de
-desempenho com outros algoritmos de roteamento, e a integração com ferramentas
-de gestão de rede óptica. Assim, o artigo contribui para o entendimento
+confiabilidade e critérios de engenharia de tráfego.
+
+Como trabalhos futuros, recomenda-se a validação da heurística em ambiente
+simulado, a comparação de desempenho com outros algoritmos de roteamento, e a
+integração com ferramentas de gestão de rede óptica.Além disso, ainda como
+estudos futuros, recomenda-se a incorporação de restrições adicionais (exemplo:
+atenuação, capacidade dos nós, distância máxima), a aplicação de técnicas
+híbridas com programação linear inteira para otimização global, a extensão do
+uso para ponto-multiponto e a inclusão de nós de conversão de onda, e também a
+consideração de rotas “ocultas”, como por exemplo em \textit{swaps} feitos com
+outras operadoras.
+
+Assim, o artigo contribui para o entendimento
 conceitual do problema de roteamento físico em redes ópticas e oferece um ponto
 de partida para o desenvolvimento de soluções automatizadas mais complexas e
 aplicáveis a cenários reais de backbone e acesso.
-
-Como trabalhos futuros, recomenda-se a incorporação de restrições adicionais
-(exemplo: atenuação, capacidade dos nós, distância máxima) e a aplicação de
-técnicas híbridas com programação linear inteira para otimização global. A
-extensão do uso para ponto-multiponto e a inclusão de nós de conversão de onda.
-Também a consideração de rotas "ocultas", como por exemplo em \textit{swaps}
-feitos com outras operadoras.
-
 
 
