--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -2,9 +2,9 @@
 
 As redes ópticas representam a espinha dorsal das infraestruturas de
 telecomunicações modernas, oferecendo alta capacidade de transmissão e
-confiabilidade. À medida que a demanda por largura de banda cresce, torna-se
-essencial otimizar o uso dos recursos físicos dessas redes, incluindo o
-roteamento e a alocação de fibras ópticas disponíveis.
+confiabilidade. Na medida em que a demanda por largura de banda cresce,
+torna-se essencial otimizar o uso dos recursos físicos dessas redes, incluindo
+o roteamento e a alocação de fibras ópticas disponíveis.
 
 Um desses desafios é o roteamento de caminhos físicos, isto é, a definição de
 quais fibras ópticas devem ser utilizadas para interligar dois pontos de
@@ -20,5 +20,5 @@ proposto, os algoritmos de base e o que já existe de estudos acadêmicos
 relevantes próximo do presente artigo na Seção \ref{sec:problem} define-se e
 delimita-se o problema de roteamento, na Seção \ref{sec:algorithm} propoe-se o
 algoritmo para escolha das fibras e, por fim, as considerações finais são dadas
-em \ref{sec:conclusion}.
+na Seção \ref{sec:conclusion}.
 
