--- a/sections/context.tex
+++ b/sections/context.tex
@@ -3,9 +3,9 @@
 Nas operadoras de telecomunicações, a operação de redes ópticas envolve a
 manutenção de inventários físicos detalhados, com informações sobre cabos,
 fibras e equipamentos. Tradicionalmente, o roteamento e a alocação de fibras
-são realizados por sistemas comerciais de gerenciamento de rede (NMS — Network
-Management Systems) que utilizam dados georreferenciados e inventários para
-automatizar o processo \cite{livroprofessor}.
+são realizados por sistemas comerciais de gerenciamento de rede (NMS —
+\textit{Network Management Systems}) que utilizam dados georreferenciados e
+inventários para automatizar o processo \cite{livroprofessor}.
 
 Entretanto, no contexto acadêmico, é possível modelar o problema por meio de
 representações em grafos, onde vértices representam nós de rede e arestas
@@ -16,5 +16,5 @@ realidade das redes ópticas \cite{bazaraa2011linear}.
 
 O desafio, portanto, consiste em definir uma heurística que associe o menor
 caminho físico e a disponibilidade de fibras livres, evitando bloqueios e
-sobrecargas, e permitindo futura expansão para o problema completo de Routing
-and Wavelength Assignment (RWA) \cite{artigorwa}.
+sobrecargas, e permitindo futura expansão para o problema completo de
+\textit{Routing and Wavelength Assignment} (RWA) \cite{artigorwa}.
