--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -9,7 +9,7 @@ o roteamento e a alocação de fibras ópticas disponíveis.
 Um desses desafios é o roteamento de caminhos físicos, isto é, a definição de
 quais fibras ópticas devem ser utilizadas para interligar dois pontos de
 acesso. Este artigo propõe um algoritmo heurístico para o roteamento de uma
-fibra dado uma rede em funcionamento.
+fibra dada uma rede em funcionamento.
 
 Para isso, o artigo é estruturado da seguinte forma: na Seção \ref{sec:context}
 é abordado como o roteamento em redes ópticas pode ser modelado academicamente
@@ -18,7 +18,7 @@ caminhos físicos com fibras disponíveis e evitar bloqueios na rede, na Seção
 \ref{sec:fundaments} aborda-se os elementos de rede relevantes para o estudo
 proposto, os algoritmos de base e o que já existe de estudos acadêmicos
 relevantes próximo do presente artigo na Seção \ref{sec:problem} define-se e
-delimita-se o problema de roteamento, na Seção \ref{sec:algorithm} propoe-se o
+delimita-se o problema de roteamento, na Seção \ref{sec:algorithm} propõe-se o
 algoritmo para escolha das fibras e, por fim, as considerações finais são dadas
 na Seção \ref{sec:conclusion}.
 
