--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -9,7 +9,7 @@ terceiro, desconsidera-se atenuação e quarto: desconsidera-se o uso de
 splitters, onde um mesmo comprimento de onda em uma fibra é "espalhado" para
 $n$ fibras em um nó.
 
-Fazendo um palalelo com \cite{artigorwa} e \cite{zang2000review}, podemos notar
+Fazendo um paralelo com \cite{artigorwa} e \cite{zang2000review}, podemos notar
 a menção de conversores ópticos, em uma aplicação mais genérica. O presente
 artigo é um "subconjunto" do tema de alocação e roteamento de onda tratado nas
 referências citadas.
@@ -28,7 +28,7 @@ maior capacidade.
 
 \begin{figure}[hb]
   \centering
-  \caption{fluxo reduzido}
+  \caption{Fluxo reduzido}
   \begin{tikzpicture}[font=\footnotesize]
     % cabo 01
     \node at (1.5,-4mm) {tubo 2};
