--- a/sections/header.tex
+++ b/sections/header.tex
@@ -1,4 +1,4 @@
-\title{Heurística de Roteamento e Alocação de Fibras em Redes Ópticas}
+\title{Heurística de Roteamento e Alocação de \\ Fibras em Redes Ópticas}
 
 \author{Diego M. A. Lütke}
 
